<resources>
    <string name="app_name">huhh</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="james">James</string>
    <string name="email">Email</string>
    <string name="_91">+ 91</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_Up">Sign Up</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Login" />
    <string name="Logins">Login</string>
    <!-- <string name="app_name">Page 1</string>-->
    <string name="ek_img_content">ExportKit Image</string>
    <string name="overview_text_string">Heres your overview:</string>
    <string name="class_counter_string">8 classes handled</string>
    <string name="subject_count_string">5 subjetcs handled</string>
    <string name="enrolled_count_string">100 students enrolled</string>
    <string name="user_text_string">Hi, Ms. Terec </string>
</resources>