<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	tools:layout_editor_absoluteX="5dp"
	tools:layout_editor_absoluteY="-72dp">
	<!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		home_fragment
     *	@date 		Tuesday 14th of May 2024 11:59:52 PM
     *	@title 		Page 1
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.figma
     *
     */
    -->
	<ScrollView
		android:id="@+id/home_fragment"
		android:layout_width="wrap_content"
		android:layout_height="match_parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/content_container"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">


			<TextView
				android:id="@+id/overview_text"
				android:layout_width="265.5dp"
				android:layout_height="47.5dp"
				android:layout_marginStart="52dp"
				android:layout_marginTop="144dp"
				android:text="@string/overview_text_string"
				android:textColor="@color/overview_text_color"
				android:textSize="25sp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/user_text"
				android:layout_width="265.5dp"
				android:layout_height="47.5dp"
				android:layout_marginStart="128dp"
				android:layout_marginTop="64dp"
				android:text="@string/user_text_string"
				android:textColor="@color/overview_text_color"
				android:textSize="25sp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/__img_user_icon"
				android:layout_width="42dp"
				android:layout_height="36.06dp"
				android:layout_marginStart="64dp"
				android:layout_marginTop="64dp"
				android:contentDescription="__img_user_icon"
				android:src="@drawable/__img_user_icon"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/__img___line_icon"
				android:layout_width="348dp"
				android:layout_height="81.05dp"
				android:layout_marginStart="40dp"
				android:layout_marginTop="124dp"
				android:contentDescription="__img___line_icon"
				android:src="@drawable/__img___line_icon"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/enrolled_count"
				android:layout_width="187.5dp"
				android:layout_height="49.5dp"
				android:layout_marginStart="84dp"
				android:layout_marginTop="216dp"
				android:text="@string/enrolled_count_string"
				android:textColor="@color/overview_text_color"
				android:textSize="25sp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/__img_image_stud"
				android:layout_width="188dp"
				android:layout_height="79dp"
				android:layout_marginStart="224dp"
				android:layout_marginTop="200dp"
				android:contentDescription="__img_image_stud"
				android:src="@drawable/__img_image_stud"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/__img_research_icon"
				android:layout_width="181dp"
				android:layout_height="96dp"
				android:layout_marginStart="64dp"
				android:layout_marginTop="336dp"
				android:contentDescription="__img_research_icon"
				android:src="@drawable/__img_research_icon"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/class_counter"
				android:layout_width="186dp"
				android:layout_height="66dp"
				android:layout_marginStart="40dp"
				android:layout_marginTop="512dp"
				android:text="@string/class_counter_string"
				android:textColor="#1E1E1E"
				android:textSize="25sp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/__img_class_icon"
				android:layout_width="163dp"
				android:layout_height="111dp"
				android:layout_marginStart="236dp"
				android:layout_marginTop="484dp"
				android:contentDescription="__img_class_icon"
				android:src="@drawable/__img_class_icon"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/subject_count"
				android:layout_width="187.5dp"
				android:layout_height="49.5dp"
				android:layout_marginStart="256dp"
				android:layout_marginTop="360dp"
				android:text="@string/subject_count_string"
				android:textColor="@color/overview_text_color"
				android:textSize="25sp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />


		</androidx.constraintlayout.widget.ConstraintLayout>

	</ScrollView>
</HorizontalScrollView>